syntax = "proto3";
enum Genre {
  COMEDY = 0;
  ACTION = 1;
  THRILLER = 2;
  DRAMA = 3;
}
message Movie {
  string title = 1;
  double rating = 2;
  Genre genre = 3;
  string description = 4;
}
message MovieFinderRequest {
  int32 user_id = 1;
  Genre genre = 2;
}
message MovieFinderResponse {
  Movie movie = 1;
}
service MovieFinderService {
  rpc findMovie(MovieFinderRequest) returns (MovieFinderResponse) {};
}