syntax = "proto3";

enum Genre {
  COMEDY = 0;
  ACTION = 1;
  THRILLER = 2;
  DRAMA = 3;
}
message Movie {
  string title = 1;
  double rating = 2;
  Genre genre = 3;
  string description = 4;
}

message UserPreferencesRequest {
  int32 user_id = 1;
  Movie movie = 2;
}
message UserPreferencesResponse {
  Movie movie = 1;
}
service UserPreferencesService {
  // Bidirectional streaming rpc call to receive a stream of movies shortlisted based on user preferences
  rpc getShortlistedMovies(stream UserPreferencesRequest) returns (stream UserPreferencesResponse) {};
}